--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.manidevopslab</groupId>
   <artifactId>ManisDevOpsLab</artifactId>
   <packaging>war</packaging>
-  <version>0.0.2</version>
+  <version>0.0.2-SNAPSHOT</version>
   <name>ManisDevOpsLab</name>
   <url>http://maven.apache.org</url>
   <dependencies>
